force-app/main/default/objects/Travel__c/Travel__c.object-meta.xml
<CustomObject>
    <description>Object representing travel data</description>
    <label>Travel</label>
    <nameField>
        <label>Destination</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>