force-app/main/default/objects/Travel__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Destination reaching date</description>
    <inlineHelpText>Destination reaching date</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>