force-app/main/default/objects/Travel__c/fields/Mode_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Travel__c</fullName>
    <description>Select the mode of travel</description>
    <inlineHelpText>Select the mode of travel</inlineHelpText>
    <label>Mode of Travel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Flight</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>