force-app/main/default/objects/Travel__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>source city of your travel</description>
    <externalId>true</externalId>
    <inlineHelpText>source city of your travel</inlineHelpText>
    <label>Source</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>