force-app/main/default/objects/Travel__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Journey Start Date</description>
    <inlineHelpText>Journey Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>