force-app/main/default/objects/Travel__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>Source__c</columns>
    <columns>NAME</columns>
    <columns>Mode_of_Travel__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Fields</label>
</ListView>